--- a/app/globals.css
+++ b/app/globals.css
@@ -5,22 +5,17 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-anto), sans-serif;
+}
+
+.bg-custom-radial {
+  background: radial-gradient(circle, #e0b8ff, #744eb2);
+}
+
+.bg-greenApple-radial {
+  background: radial-gradient(circle, #E0FFBB, #7AB24E);
+}
+.bg-bananaContainer-radial {
+  background: radial-gradient(circle , #FFE3B8, #D68042)
 }
